[gd_scene load_steps=5 format=2]

[ext_resource path="res://Meteor04.gd" type="Script" id=1]
[ext_resource path="res://res/sprite/meteorito1.png" type="Texture" id=2]
[ext_resource path="res://res/sprite/meteorito1b.png" type="Texture" id=3]
[ext_resource path="res://res/snd/meteromove.wav" type="AudioStream" id=4]

[node name="Meteor04" type="Node2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )

[node name="m4_1" type="Sprite" parent="."]
visible = false
position = Vector2( 26.6667, 44 )
texture = ExtResource( 2 )

[node name="m4_2" type="Sprite" parent="."]
visible = false
position = Vector2( 161, 24 )
texture = ExtResource( 2 )

[node name="m4_3" type="Sprite" parent="."]
visible = false
position = Vector2( 288.667, 14.6667 )
texture = ExtResource( 2 )

[node name="m4_4" type="Sprite" parent="."]
visible = false
position = Vector2( 417, 19 )
texture = ExtResource( 2 )

[node name="m4_5" type="Sprite" parent="."]
visible = false
position = Vector2( 543, 28.3333 )
texture = ExtResource( 2 )

[node name="m4_6" type="Sprite" parent="."]
visible = false
position = Vector2( 666, 32 )
texture = ExtResource( 2 )

[node name="m4_7" type="Sprite" parent="."]
position = Vector2( 747.001, 42.3334 )
texture = ExtResource( 3 )

[node name="mmove" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
